[tool.poetry]
name = "spy_crawler"
version = "0.1.1"
description = ""
authors = ["Rafael Fonseca <justonedev42@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
httpx = { extras = ["http2"], version = "^0.26.0" }
parsel = "^1.8.1"
pandas = "^2.2.0"
tabulate = "^0.9.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
